Implement dynamite->preprocessing in new style